smaller screen overflow fixed.

--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
-
-html{
+html {
   font-size: 62.5%;
 }
 
-
-body{
+body {
   align-items: center;
   background-position: center;
   background-size: cover;
@@ -18,8 +16,9 @@ body{
   justify-content: center;
   margin: 0;
   overflow: hidden;
+  width: auto;
 }
-h1{
+h1 {
   font-size: 1.8rem;
   letter-spacing: 0.7rem;
   font-weight: 600;
@@ -27,17 +26,16 @@ h1{
   text-transform: uppercase;
 }
 
-.clock{
+.clock {
   display: flex;
 }
 
-.clock div{
+.clock div {
   margin: 0.5rem;
   position: relative;
-
 }
 
-.clock span{
+.clock span {
   width: 10rem;
   height: 8rem;
   background: rgba(5, 87, 1, 0.8);
@@ -48,7 +46,7 @@ h1{
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
-.clock .text{
+.clock .text {
   font-size: 1.3rem;
   letter-spacing: 0.2rem;
   height: 3rem;
@@ -56,32 +54,32 @@ h1{
   text-transform: uppercase;
 }
 
-.clock .ampm{
+.clock .ampm {
   font-size: 1.8rem;
   letter-spacing: 0.2rem;
   text-transform: uppercase;
   font-weight: 600;
   height: 3rem;
   width: 6rem;
-  background: rgba(133, 102, 3, 0.8);
- position: absolute;
- bottom: 0;
+  background: rgba(40, 36, 25, 0.8);
+  position: absolute;
+  bottom: 0;
 }
 
-@media (max-width:600px){
-  h1{
+@media (max-width: 600px) {
+  h1 {
     font-size: 1.3rem;
   }
-  .clock span{
+  .clock span {
     width: 7rem;
     height: 5rem;
     font-size: 3rem;
   }
-  .clock .text{
+  .clock .text {
     font-size: 1rem;
     height: 2rem;
   }
-  .clock .ampm{
+  .clock .ampm {
     font-size: 1.3rem;
     height: 2rem;
     width: 4rem;
